<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">LimAppManager</string>

    <string name="action_settings">Info</string>
    <string name="action_donate">Donate</string>
    <string name="action_restart">Restart</string>
    <string name="action_exit">Exit</string>

    <string name="install">Install</string>
    <string name="install_root">Silent install</string>
    <string name="delete">Delete file</string>
    <string name="back">Back</string>
    <string name="reconnect">Reconnect</string>

    <string name="error_connection">Error while connecting to server. Check internet connection and try again.</string>
    <string name="error_index">Seems, this Android version is not supported yet.</string>
    <string name="download_started">Download has been started.</string>
    <string name="file_deleted">File has been deleted.</string>
    <string name="file_not_deleted">File has NOT been deleted.</string>
    <string name="download_error">There was an error while download.</string>

    <string name="no_desc">No description is available for this application.</string>

    <string name="hello_world">Hello world!</string>
</resources>
