<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.limowski.app.manager.MainActivity">

<item
    android:id="@+id/settingsActionMain"
    android:title="@string/action_settings"
    android:orderInCategory="0"
    android:showAsAction="never" />

<item
    android:id="@+id/restartActionMain"
    android:title="@string/action_restart"
    android:orderInCategory="1"
    android:showAsAction="never" />

<item
    android:id="@+id/exitActionMain"
    android:title="@string/action_exit"
    android:orderInCategory="2"
    android:showAsAction="never" />

<item
    android:id="@+id/donateActionMain"
    android:title="@string/action_donate"
    android:orderInCategory="3"
    android:visible="false"
    android:showAsAction="never" />

</menu>
