<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    tools:context="com.limowski.app.manager.AppActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/appTitle"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView"
        android:textColor="@android:color/white"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/appDesc"
        android:layout_below="@+id/imageView"
        android:textColor="@android:color/white"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/buttonDelete"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/install"
        android:id="@+id/buttonInstall"
        android:layout_above="@+id/buttonDelete"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/install_root"
        android:id="@+id/buttonInstallSilent"
        android:layout_above="@+id/buttonDelete"
        android:layout_toRightOf="@+id/buttonInstall"
        android:enabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:id="@+id/appVersion"
        android:layout_below="@+id/appTitle"
        android:layout_toRightOf="@+id/imageView"
        android:textColor="@android:color/white"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:id="@+id/appSize"
        android:layout_below="@+id/appVersion"
        android:layout_toRightOf="@+id/imageView"
        android:textColor="@android:color/white"
        android:layout_marginLeft="5dp"/>

</RelativeLayout>
